# lng-idc-design-study

./: .gitignore  README.md  pyproject.toml
config/: base.toml
deliverables/: presentation_draft.pptx  presentation_script.md  report_draft.md
deliverables/slides_src/: package-lock.json  package.json  presentation_academic_draft.js  presentation_draft.js
docs/: assumptions.md  github_gpt54_code_review_prompt.md  literature_notes.md  original_project_analysis.md  passive_heat_basis.md  sources.md
references/local/: legacy_heat_exchanger_design.xlsx
references/web/: coolprop_high_level_api.html  coolprop_mixtures.html  energyplus_ground_heat_exchanger_reference.html  energyplus_ground_temperature_reference.html  kea_standard_info.html  kogas_lng_cold_energy_business.html  nist_methane_webbook.html  nist_refprop.html
src/lng_dc_design/: __init__.py  auxiliary_heat.py  baseline_vcc.py  capex.py  cli.py  config.py  deliverables.py  economics.py  fluid_screening.py  hx_lng_vaporizer.py  idc_hx.py  idc_secondary_loop.py  idc_secondary_sensitivity.py  legacy_compare.py  lng_mixture.py  load_model.py  mixture_transport_sensitivity.py  parallel.py  pipeline_loop.py  report_assets.py  scenario_study.py  system_eval.py  thermo.py  thermo_limit.py  uncertainty.py  validation.py
src/lng_dc_design.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_smoke.py
