[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lng-dc-design"
version = "0.1.0"
description = "Reproducible LNG cold-energy IDC cooling system design study."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.12",
  "CoolProp>=6.6",
  "matplotlib>=3.9",
  "numpy>=2.1",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "pypdf>=6.0",
  "requests>=2.32",
  "scipy>=1.14",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
